imp/themes/screen-dimp.css
/* ... */
div.vpRowSelected {
    background: #ffa !important;
}
div.vpRowHoriz div.sep {
    border-right: 1px solid #ddd;
}
div.vpRowHoriz, div.vpRowHoriz div {
    text-indent: 2px;
}

/* Rows: flags. */
div.flagLowpriority {
    font-weight: normal !important;
}
div.flagUnseen {
    font-weight: bold;
}
div.flagDeleted {
    text-decoration: line-through;
}

/* Checkbox images */
div.msCheck {
    background-image: url("graphics/checkbox_off.png");
}
div.msCheck:hover {
    background-image: url("graphics/checkbox_over.png");
}
div.vpRowSelected div.msCheck {
    background-image: url("graphics/checkbox_on.png");
}

/* Rows (vertical mode) */
div.vpRowVert {
    height: auto;
}
div.vpRowVert div {
    font-size: 100%;
}
div.vpRowVert div.msgStatus {
    height: 24px;
    margin-right: 2px;
    padding-top: 8px;
    width: 15%;
}
div.vpRowVert div.msgFrom {
    font-weight: bold;
    width: auto;
}
div.vpRowVert div.msgDate {
    float: right;
    padding-right: 2px;
    text-indent: 2px;
    width: auto;
}
div.vpRowVert div.msgSubject {
    float: none;
    font-style: italic;
    margin-right: 2px;
    width: auto;
}
div.vpRowVert div.msgSubject span.flagUser {
    font-style: normal;
}

div.vpRowVert.flagUnseen {
    font-weight: normal;
}

/* ViewPort - scroller */
.vpScroll {
    background: url("graphics/scroller_back.png") repeat-y;
}
.vpScrollCursor {
    background: url("graphics/scroller.png") repeat-y;
    border-left: 1px solid silver;
    width: 13px;
}
.vpScrollDown, .vpScrollUp {
    border-left: 1px solid silver;
    height: 16px;
    width: 13px;
}
.vpScrollUp {
    background-image: url("graphics/sbcursor_top.png");
}
.vpScrollDown {
    background-image: url("graphics/sbcursor_bottom.png");
}

/* IFRAMEs */
.iframe {
    position: absolute;
    left: 0;
    top: 0;
    border: 0;
    width: 100%;
    height: 100%;
}

/* Sidebar */
#sidebar .sepfull {
    height: 1px !important;
    margin: 5px 0;
    background: silver;
}
#sidebar .count {
    color: silver;
}
#sidebar li {
    list-style: none;
    height: 16px;
    line-height: 16px;
    padding-top: 1px;
    white-space: nowrap;
}
#sidebar li a, #sidebar li.folder, #sidebar li.container, #sidebar li.custom, #sidebar li.servicelink {
    color: #000;
    font-size: 95%;
    text-decoration: none;
}
#sidebar li.servicelink a {
    font-weight: bold;
}
#sidebar li.custom {
    background: transparent none;
}
#sidebar li.custom img {
    float: left;
    padding: 1px 4px 0 0;
    margin-bottom: -1px;
}
#sidebar li.on {
    background: #ffa;
}
#sidebar li.subfolders {
    height: auto;
    margin: 0;
}
#sidebar li.subfolders ul {
    padding-left: 10px;
}
#sidebar span.iconSpan {
    display: inline;
    float: left;
    width: 20px;
    height: 100%;
    background-repeat: no-repeat;
}
#ctx_folder_sub span.contextImg, #ctx_folder_unsub span.contextImg, #ctx_folderopts_sub span.contextImg, #ctx_folderopts_unsub span.contextImg {
    background-image: url("graphics/folders/folder.png");
}
#sidebar span.col, #ctx_folderopts_collapse span.contextImg, #ctx_container_collapse span.contextImg, #ctx_folder_collapse span.contextImg {
    background-image: url("graphics/folders/minus.png");
}
#sidebar span.exp, #ctx_folderopts_expand span.contextImg, #ctx_container_expand span.contextImg, #ctx_folder_expand span.contextImg {
    background-image: url("graphics/folders/plus.png");
}
#normalfolders {
    overflow-x: hidden;
}
#normalfolders li.unsubFolder {
    font-style: italic;
}
#sidebar .over a, #sidebar li.folder:hover, #sidebar li.custom:hover, #sidebar li.servicelink:hover {
    cursor: pointer;
    font-weight: bold;
    text-decoration: underline;
}
#sidebar .container span.iconSpan {
    cursor: pointer;
}

#folderopts a {
    display: inline !important;
    padding-right: 1px;
}

/* Message options. */
.dimpOptions {
    float: right;
}
.dimpOptions div {
    line-height: 16px;
    padding-bottom: 2px;
}
.dimpOptions span {
    cursor: pointer;
}
.dimpOptions .iconImg {
    margin-right: 0;
}
.dimpOptions a, .dimpOptions a:visited {
    text-decoration: none;
    color: #000;
}
.dimpOptions a:hover {
    text-decoration: underline;
}

/* Actions */
.dimpActions {
    background: #efefef;
    padding: 4px 2px;
    border: 1px silver solid;
    background: transparent url("graphics/backhead_s2.png") repeat-x;
    height: 16px;
}
.dimpActions div {
    cursor: pointer;
    float: left;
    padding-right: 6px;
}
.dimpActions a, .dimpActions a:visited, .dimpActions label {
    color: #000;
    font-size: 90%;
    font-weight: bold;
    white-space: nowrap;
    padding: 2px 4px 4px 4px;
}
.dimpActions a img {
    margin-right: 4px;
    vertical-align: top;
}
.dimpActions a:hover, .dimpActions span.popdown:hover, .dimpActions span.spellcheckPopdownImg:hover, span.popdownImg:hover {
    background-color: #e3e3e3;
    text-decoration: none;
}
.dimpActions span.spellcheckPopdownImg:hover, span.popdownImg {
    border: 0;
    margin: 0;
}
.dimpActions .disabled a:hover {
    background-color: transparent;
}
.dimpactions .disabled, .dimpActions .disabled a, .dimpActions .disabled a:visited, .dimpActions .disabled a:active, .dimpActions .disabled a:hover {
    cursor: default;
    text-decoration: none;
    color: silver;
}
.dimpActions .disabled span.iconImg, .dimpActions .disabled span.spellcheckPopdownImg {
    filter: alpha(opacity=25);
    -moz-opacity: .25;
    opacity: .25;
}
.dimpActions .disabled span.popdown:hover, .dimpActions .disabled span.spellcheckPopdownImg {
    border: 0;
    cursor: default;
    margin: 0;
}

#button_compose, #button_checkmail {
    display: none;
}

div.dimpActionsCompose, div.dimpActionsMsg {
    border-bottom: 1px solid #999;
}

/* Preview pane styles. */
#previewPane {
    overflow: auto;
}
#previewInfo {
    background: transparent url("graphics/ico_message_off.png") no-repeat scroll 10px 15px;
    color: #a0a0a0;
    line-height: 18px;
    padding: 15px 80px 10px 35px;
}
/* ... */

